@@ -2,6 +2,9 @@
 
 	* added check for ".sword/InstallMgr/InstallMgr.conf" in users home 
 	  directory.
+	* added progress bar for refresh remote
+	* added dialog to warn user to restart gs when modules have been changed
+	  util we can do better.
 	
 
 2004-01-05  Terry <tbiggs@users.sf.net>
